--- a/apps/templates/services/client_list.html
+++ b/apps/templates/services/client_list.html
@@ -9,8 +9,9 @@
       <li class="list-group-item d-flex justify-content-between align-items-center">
         {{ client.name }}
         <div>
-          <a href="{% url 'services:client_edit' client.id %}" class="btn btn-primary btn-sm">Edit</a>
-          <a href="{% url 'services:client_delete' client.id %}" class="btn btn-danger btn-sm">Delete</a>
+            <a href="{% url 'services:client_edit' client.id %}" class="btn btn-primary btn-sm">Edit</a>
+            <a href="{% url 'services:client_delete' client.id %}" class="btn btn-danger btn-sm">Delete</a>
+            <a href="{% url 'services:client_info' client.id%}" class="btn btn-info btn-sm">Info</a>
         </div>
       </li>
     {% endfor %}
